--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <day = Date.today.strftime("%A")>
-    <month_day = Date.today.strftime("%B %d")>
-    <year = Date.today.strftime("%Y") %>
-    <h1>"The date is #{day}, #{month_day}, #{year}"</h1>
+    <% date= Time.now.strftime("%A, %B %d, %Y") %>
+
+      <h1><%= "The date is #{date}." %></h1>
   </body>
 </html>
