--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Goodbye #{name}</h1>
+    <% name=("Joe") %>
+   <h1><%= "Goodbye #{name}"%></h1>
   </body>
 
 </html>
